--- a/.github/workflows/build_push.yml
+++ b/.github/workflows/build_push.yml
@@ -6,43 +6,11 @@ on:
     branches:
       - main
   
-
 jobs:
-  main-to-gh-pages:
+  bump:
     runs-on: ubuntu-latest
-
     steps:
-      - name: checkout main
-        uses: actions/checkout@v3
-        with:
-          ref: main
-
-      - name: install nodejs
-        uses: actions/setup-node@v1
-
-      - name: configue gitbook
-        run: |
-          npm install -g gitbook-cli          
-          gitbook install
-          npm install -g gitbook-summary
-      - name: generate _book folder
-        run: |
-          book sm
-          gitbook build
-          cp SUMMARY.md _book
-      - name: push _book to branch gh-pages
-        env:
-          TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
-          REF: github.com/${{github.repository}}
-          MYEMAIL: kimi0230@gmail.com
-          MYNAME: ${{github.repository_owner}}
-        run: |
-          cd _book
-          git config --global user.email "aurorataro@foxmail.com"
-          git config --global user.name "aurorataro"
-          git init
-          git remote add origin https://${REF}
-          git add . 
-          git commit -m "Updated By Github Actions With Build ${{github.run_number}} of ${{github.workflow}} For Github Pages"
-          git branch -M main
-          git push --force --quiet "https://${TOKEN}@${REF}" main:gh-pages
+    - uses: actions/checkout@master
+    - uses: tool3/docsify-action@master
+      with:
+        github_token: ${{ secrets.GH_ACCESS_TOKEN }}
