--- a/.github/workflows/build_pr.yml
+++ b/.github/workflows/build_pr.yml
@@ -16,3 +16,4 @@ jobs:
     - uses: tool3/docsify-action@master
       with:
         github_token: ${{ secrets.GH_ACCESS_TOKEN }}
+        branch: gh-pages
