--- a/.github/workflows/build_push.yml
+++ b/.github/workflows/build_push.yml
@@ -14,3 +14,4 @@ jobs:
     - uses: tool3/docsify-action@master
       with:
         github_token: ${{ secrets.GH_ACCESS_TOKEN }}
+        branch: gh-pages
